force-app/main/default/objects/Season__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The official end date of the season (last game date).</description>
    <inlineHelpText>Enter the date of the last game in this season.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>