force-app/main/default/objects/Season__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The official start date of the season (first game date).</description>
    <inlineHelpText>Enter the date of the first game in this season.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>